--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@
 - Clean up types (especially frontend)
 - Current round != last added round - dynamically via timestamps
 - RNG? at least for map selects
-- Match = Class, Timer = Class, to be manipulated from everywhere
+- Match = Class, Round = Class, to be manipulated from everywhere
